Version 2.1.18 - June 10, 2020
   - Add support for concentration unit conversion (ppm, ppb, percent)
   - Default concentration units for DXC-200 is now Percent.
   - Add reset and set_protocol commands to usbtenkisetup
   - Add support for Internal/External T/RH channels
   - Add low temperature compensaion ms5611-based redings (USB-BAR20 and PTH-200)

Version 2.1.17 - April 5, 2019
   - [QTenki] Disable group separator (eg: thousands) in logger
   - Improved support for CO2 sensors

Version 2.1.16 - January 31, 2019
   - Bugfix for libusb0.1 build type

Version 2.1.15 - January 25, 2019
   - Add support for the TMC-200k thermocouple converter
   - Add support for specific per-channel status/error such as 'probe
     disconnected' (for products with the necessary circuitry only)
   - Prepare support for upcoming DXC Gaz sensor products
   - Prepare support for upcoming RTD-300 products

Version 2.1.14 - November 21, 2018
   - [QTenki] Fix a crash when the graph is manipulated certain ways
   - Add support for the Sensirion SPS30 particle sensor
   - Add support for the Sensirion SCD30 CO2 sensor
   - Add support for the VEML6075 UVA/UVB sensor
   - Add support for the VEML6030 Ambiant light sensor
   - Add support for arbitrary units
   - Add programming examples is several languages
   - Add preventive retries in case of IO errors
   - libusb 1.0 support

Version 2.1.13 - November 27, 2017
   - [QTenki] Fix thermocouple colorization when multiple units are connected

Version 2.1.12 - November 15, 2017
   - [General] Support for specific thermocouple types
   - [QTenki] Add thermocouple type color display (ANSI and IEC)

Version 2.1.11 - October 1, 2017
   - [General] Add thermocouple support
   - [Command-line] Thermocouple type configuration support

Version 2.1.10 - August 8, 2017
   - [QTenki] Fix a possible hang and/or crash issue

Version 2.1.9 - August 7, 2017
   - [General] Add support for VOC sensor
   - [Windows] Fix driver installation
