@@ -1,4 +1,5 @@
 usbtenkiget
 usbtenkisetup
+usbtenkiset
 *.so
 *.dylib
