@@ -4,6 +4,7 @@ Version 2.1.18 - June 10, 2020
    - Add reset and set_protocol commands to usbtenkisetup
    - Add support for Internal/External T/RH channels
    - Add low temperature compensaion ms5611-based redings (USB-BAR20 and PTH-200)
+   - Rename usbtenkisetup to usbtenkiset
 
 Version 2.1.17 - April 5, 2019
    - [QTenki] Disable group separator (eg: thousands) in logger
